--- a/sass/utils/vars.scss
+++ b/sass/utils/vars.scss
@@ -8,7 +8,9 @@
   $CardsBgColor: #ffffff;
   $FeaturesTxtColor: #757575;
   $MainSpaceSections: 94px;
+  $MobileMainSpaceSections: 30px;
   $InteriorWidthContainer: 1200px;
+  $MobileInteriorWidthContainer: 450px;
   $IconColor: #afb1b8;
   $MainTransitionDuration: 250ms;
   $MainTransitionTimingFunction: cubic-bezier(0.4, 0, 0.2, 1);
