--- a/sass/components/_portfolio-btn-section.scss
+++ b/sass/components/_portfolio-btn-section.scss
@@ -7,6 +7,116 @@
 &__button-list {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  justify-content: left;
+  margin: 0px;
+  padding: 0px;
+}
+
+&__button-1 {
+  width: 103px;
+  height: 38px;
+  background: $PortfolioBtnColor;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition-property: box-shadow, background;
+}
+&__button-2 {
+  width: 130px;
+  height: 38px;
+  background: $PortfolioBtnColor;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition-property: box-shadow, background;
+}
+
+&__button-3 {
+  width: 145px;
+  height: 38px;
+  background: $PortfolioBtnColor;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition-property: box-shadow, background;
+}
+
+&__button-4 {
+  width: 103px;
+  height: 38px;
+  background: $PortfolioBtnColor;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition-property: box-shadow, background;
+}
+
+&__button-5 {
+  width: 130px;
+  height: 38px;
+  background: $PortfolioBtnColor;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition-property: box-shadow, background;
+}
+
+&__button-1:hover,
+&__button-1:focus,
+&__button-2:hover,
+&__button-2:focus,
+&__button-3:hover,
+&__button-3:focus,
+&__button-4:hover,
+&__button-4:focus,
+&__button-5:hover,
+&__button-5:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition-duration: $MainTransitionDuration;
+  transition-timing-function: $MainTransitionTimingFunction;
+}
+}
+
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+}
+
+
+@media screen and (min-width: 768px) {
+}
+
+/*.portfolio {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+
+&__button-list {
+  list-style: none;
+  display: flex;
   gap: 8px;
   justify-content: center;
   margin: 0px;
@@ -98,4 +208,4 @@
   transition-timing-function: $MainTransitionTimingFunction;
 }
 }
-
+*/
