--- a/sass/components/_clients-section.scss
+++ b/sass/components/_clients-section.scss
@@ -1,4 +1,6 @@
 .clients {
+width: auto;
+
   &__header {
     font-weight: 700;
     font-size: 36px;
@@ -7,31 +9,32 @@
     text-align: center;
     padding-top: 60px;
     margin: 0px;
+    
   }
 
   &__list {
     list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: block;
+    justify-content: center;
     margin-top: 50px;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
-    padding: 0px 15px 0px 15px;
+    gap: 30px;
+    padding: 0px;
   }
 
   &__list-item {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 197.33px;
+    max-width: 208px;
     height: 92px;
     border: 1px solid #afb1b8;
     border-radius: 4px;
     fill: $IconColor;
     transition-property: border, fill;
-    flex-basis: calc (100% - (1 * 30% / 2));
+    
 
     margin-bottom: 30px;
   }
@@ -46,55 +49,31 @@
   }
 }
 
-@media screen and (min-width: 481px) and (max-width: 767px) {
-}
-
-@media screen and (min-width: 768px) {
-}
-
-/*
+@media screen and (min-width: 768px) and (max-width: 1199px) {
 .clients {
-&__header {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-  text-align: center;
-  padding-top: $MainSpaceSections;
-  margin: 0px;
+  &__header {padding-top: $MainSpaceSections;}
+  &__list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
 }
-
-&__list {
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 50px;
-  margin-bottom: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  padding: 0px 15px 0px 15px;
-}
-
 &__list-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  fill: $IconColor;
-  transition-property: border, fill;
+       max-width: 224px;
+       flex-basis: calc (100% - (1 * 30% / 2));
+}
+} 
 }
 
-&__list-item:hover,
-&__list-item:focus {
-  border: 1px solid $ActiveLinkColor;
-  fill:$ActiveLinkColor;
-  cursor: pointer;
-  transition-duration: $MainTransitionDuration;
-  transition-timing-function: $MainTransitionTimingFunction;
+@media screen and (min-width: 1200px) {
+.clients {
+  &__header {padding-top: $MainSpaceSections;}
+  &__list {
+    list-style: none;
+    display: flex;
+    flex-wrap: nowrap;
 }
-
+&__list-item {
+       max-width: 168px;
 }
-*/
+}
+}
