--- a/sass/components/_feature-section.scss
+++ b/sass/components/_feature-section.scss
@@ -1,7 +1,7 @@
 .feature {
   margin-left: auto;
   margin-right: auto;
-  width: $MobileInteriorWidthContainer;
+  width: auto;
   display: block;
   justify-content: center;
 
@@ -10,14 +10,14 @@
     display: block;
     gap: 30px;
     justify-content: center;
-    padding: 0;
+    padding: 0px 15px;
   }
 
   &__icon-bg {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 450px;
+    width: auto;
     height: 120px;
     background: #f5f4fa;
     margin-bottom: 30px;
@@ -37,17 +37,35 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: $FeaturesTxtColor;
-    width: 450px;
+    width: auto;
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .feature {
+    display: flex;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    &__list {
+      display: flex;
+      flex-wrap: wrap;
+      flex-basis: calc (100% - 1 * 30% /2);
+    }
+
+    &__icon-bg {
+      height: 120px;
+    }
+
+    &__description {
+      width: auto;
+    }
+  }
 }
 
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .feature {
-    width: $InteriorWidthContainer;
+    width: auto;
 
     &__list {
       display: inline-flex;
@@ -65,46 +83,3 @@
     }
   }
 }
-
-/*
-.feature {
-  margin-left: auto;
-  margin-right: auto;
-  width: $InteriorWidthContainer;
-  display: block;
-  justify-content: center;
-
-  &__list {
-    list-style: none;
-    display: inline-flex;
-    gap: 30px;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-
-  &__icon-bg {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 270px;
-    height: 120px;
-    background: #f5f4fa;
-    margin-bottom: 30px;
-    border-radius: 4px;
-  }
-
-  &__header {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-  }
-
-  &__description {
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: $FeaturesTxtColor;
-    width: 270px;
-  }
-} */
