--- a/sass/components/_main-header-section.scss
+++ b/sass/components/_main-header-section.scss
@@ -1,6 +1,6 @@
 .main {
   height: 400px;
-  width: 480px;
+  width: auto;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 40%) 100%,
@@ -23,7 +23,6 @@
     color: #ffffff;
     width: 365px;
     margin: auto;
-    margin-top: 118px;
     margin-bottom: 30px;
     
   }
@@ -46,15 +45,25 @@
 }
 
 
-@media screen and (min-width: 481px) and (max-width: 767px) {
-  
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .main {
+     height: 400px;
+     width: auto;
+     background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 40%) 100%,
+      rgba(47, 48, 58, 100%) 100%
+    ),
+    url("../images/header-image-tablet.jpg");
+
+ }
 }
 
-@media screen and (min-width: 768px)  {
+@media screen and (min-width: 1200px) {
   .main {
      height: 600px;
-     width: 1600px;
-  background-image: linear-gradient(
+     width: auto;
+     background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 40%) 100%,
       rgba(47, 48, 58, 100%) 100%
@@ -65,51 +74,5 @@
   font-size: 44px;
   width: 700px;
   }
-}}
-
-
-
-/* .main {
-  height: 600px;
-  background-image: linear-gradient(
-      to right,
-      rgba(47, 48, 58, 40%) 100%,
-      rgba(47, 48, 58, 100%) 100%
-    ),
-    url("../images/header-image-desktop.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: auto;
-  display: flex;
-  justify-content: center;
-
-  &__header {
-    text-align: center;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: #ffffff;
-    width: 700px;
-    margin: auto;
-    margin-bottom: 30px;
-  }
-
-  &__button {
-    margin: auto;
-    width: 200px;
-    height: 50px;
-    background: #2196f3;
-    border-radius: 4px;
-    border: 0px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    color: #ffffff;
-    cursor: pointer;
-    display: block;
-  }
 }
-*/
+}
