--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -5,6 +5,7 @@
   margin-right: auto;
   display: flex;
   justify-content: center;
+  width: auto;
 
   &__header {
     font-weight: 700;
@@ -18,8 +19,8 @@
 
   &__section {
     margin-top: 50px;
-    padding-bottom: $MainSpaceSections;
-    width: $MobileInteriorWidthContainer;
+    padding-bottom: $MobileMainSpaceSections;
+    width: auto;
   }
 
   &__list {
@@ -32,7 +33,7 @@
 
   &__card {
     background: $CardsBgColor;
-    width: 450px;
+    width: auto;
     height: 622px;
     text-align: center;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -62,8 +63,10 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin: 16px 122px 24px 122px;
-    padding: 0px;
+    margin-top: 16px;
+    margin-bottom: 24px;
+
+    padding: 0;
   }
 
   &__icons {
@@ -92,17 +95,29 @@
   }
 }
 
-@media screen and (min-width: 481px) and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team {
+    &__list {
+      padding: 0px;
+      margin: 0px;
+      list-style: none;
+      display: flex;
+      flex-wrap: wrap;
+      flex-basis: calc((100% - 30px) / 2);
+      justify-content: center;
+      gap: 30px;
+    }
+  }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .team {
     &__header {
       font-size: 36px;
     }
 
     &__section {
-      width: 1600px;
+      max-width: 1600px;
     }
 
     &__list {
@@ -132,95 +147,3 @@
   }
 }
 
-/* .team {
-  background: $PortfolioBtnColor;
-  margin-top: $MainSpaceSections;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  justify-content: center;
-
-  &__header {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
-    text-align: center;
-    padding-top: $MainSpaceSections;
-    margin: 0px;
-  }
-
-  &__section {
-    margin-top: 50px;
-    padding-bottom: $MainSpaceSections;
-    width: $InteriorWidthContainer;
-  }
-
-  &__list {
-    padding: 0px;
-    margin: 0px;
-    list-style: none;
-    display: flex;
-    gap: 30px;
-    justify-content: center;
-  }
-
-  &__card {
-    background: $CardsBgColor;
-    width: 270px;
-    height: 428px;
-    text-align: center;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    margin: 0px;
-  }
-
-  &__name {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-  }
-
-  &__title {
-    font-size: 16px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: $CardsTxtColor;
-  }
-
-  &__icon-list {
-    list-style: none;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-top: 16px;
-  }
-
-  &__icons {
-    width: 206px;
-    height: 56px;
-  }
-
-  &__icon-bg {
-    width: 40px;
-    height: 40px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    fill: $IconColor;
-    transition-property: background-color, fill;
-  }
-
-  &__icon-bg:hover,
-  &__icon-bg:focus {
-    background-color: $ActiveLinkColor;
-    fill: #ffffff;
-    cursor: pointer;
-    transition-duration: $MainTransitionDuration;
-    transition-timing-function: $MainTransitionTimingFunction;
-  }
-} */
