--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,68 @@
 @import "./components/modal";
 @import "./components/portfolio-btn-section";
 @import "./components/portfolio-project-section";
+@import "./components/mobile-menu-modal";
 
+* ::before,
+::after {
+  box-sizing: border-box;
+}
+
+.section {
+  margin-bottom: $MobileMainSpaceSections;
+}
+
+.section-2 {
+  margin-top: $MobileMainSpaceSections;
+}
+
+body {
+  font-family: "Roboto", "Helvetica", "Arial", "sans-serif";
+  background: $MainBgColor;
+  color: $MainTextColor;
+  margin: 0px;
+}
+
+.list {
+  list-style: none;
+  display: flex;
+}
+
+button:hover,
+button:focus {
+  background-color: $ActiveLinkColor;
+  color: #ffffff;
+  transition-duration: $MainTransitionDuration;
+  transition-timing-function: $MainTransitionTimingFunction;
+  cursor: pointer;
+}
+
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+}
+
+@media only screen and (min-width: 1200px) {
+  .section {
+    margin-bottom: $MainSpaceSections;
+  }
+
+  .section-2 {
+    margin-top: $MainSpaceSections;
+  }
+
+  .container {
+    max-width: 1200px;
+    margin: auto;
+  }
+}
+
+/*
 * ::before,
 ::after {
   box-sizing: border-box;
@@ -44,39 +105,7 @@ button:focus {
 }
 
 .container {
-  width: 100%;
-}
-
-@media screen and (min-width: 320px) and (max-width: 480px) {
-  body {
-  width: 480px;
-}
-  
-  .container {
-    width: 450px;
-  }
-}
-
-@media screen and (min-width: 481px) and (max-width: 767px) {
-  .container {
-    margin: auto;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  body {
-  width: 1600px;
-}
-  
-  .container {
-    margin: auto;
-  }
-}
-
-/*
-.container {
   max-width: 1200px;
-  min-width: 320px;
-  margin: auto;
+  margin:auto;
 }
 */
