--- a/sass/utils/vars.scss
+++ b/sass/utils/vars.scss
@@ -8,6 +8,7 @@
   $CardsBgColor: #ffffff;
   $FeaturesTxtColor: #757575;
   $MainSpaceSections: 94px;
+  $MobileMainSpaceSections: 60px;
   $MobileMainSpaceSections: 30px;
   $InteriorWidthContainer: 1200px;
   $MobileInteriorWidthContainer: 450px;
